<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="headerText">My Nanodegree Apps!</string>
    <string name="spotifyStreamerText">Spotify Streamer</string>
    <string name="scoresAppText">Scores App</string>
    <string name="libraryAppText">Library App</string>
    <string name="buildItBiggerText">Build It Bigger</string>
    <string name="xyzReaderText">XYZ Reader</string>
    <string name="capstoneText">Capstone: My Own App</string>
</resources>
