<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_main"
    tools:context=".MainActivityFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/headerText"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotifyStreamerText"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:width="200dp" />

    <Button
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresAppText"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:width="200dp" />

    <Button
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libraryAppText"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:width="200dp" />

    <Button
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItBiggerText"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:width="200dp" />

    <Button
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyzReaderText"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:width="200dp" />

    <Button
        style="@style/CapstoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstoneText"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:width="200dp" />

</RelativeLayout>
